cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09424_288435321.yaml
Resources:
  VPCB9E5F0B4:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: FailbrowserStack/VPC
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/Resource
  VPCfbappserverSubnet1SubnetC6845795:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: FailbrowserStack/VPC/fbappserverSubnet1
        - Key: aws-cdk:subnet-name
          Value: fbappserver
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/fbappserverSubnet1/Subnet
  VPCfbappserverSubnet1RouteTable24419A05:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: FailbrowserStack/VPC/fbappserverSubnet1
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/fbappserverSubnet1/RouteTable
  VPCfbappserverSubnet1RouteTableAssociation81872162:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCfbappserverSubnet1RouteTable24419A05
      SubnetId:
        Ref: VPCfbappserverSubnet1SubnetC6845795
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/fbappserverSubnet1/RouteTableAssociation
  VPCfbappserverSubnet1DefaultRoute30011F7A:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VPCfbappserverSubnet1RouteTable24419A05
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VPCIGWB7E252D3
    DependsOn:
      - VPCVPCGW99B986DC
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/fbappserverSubnet1/DefaultRoute
  VPCfbappserverSubnet2SubnetC3C2799E:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: FailbrowserStack/VPC/fbappserverSubnet2
        - Key: aws-cdk:subnet-name
          Value: fbappserver
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/fbappserverSubnet2/Subnet
  VPCfbappserverSubnet2RouteTable4DA21D5E:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: FailbrowserStack/VPC/fbappserverSubnet2
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/fbappserverSubnet2/RouteTable
  VPCfbappserverSubnet2RouteTableAssociation7C11AFDE:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCfbappserverSubnet2RouteTable4DA21D5E
      SubnetId:
        Ref: VPCfbappserverSubnet2SubnetC3C2799E
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/fbappserverSubnet2/RouteTableAssociation
  VPCfbappserverSubnet2DefaultRouteF1813B91:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: VPCfbappserverSubnet2RouteTable4DA21D5E
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: VPCIGWB7E252D3
    DependsOn:
      - VPCVPCGW99B986DC
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/fbappserverSubnet2/DefaultRoute
  VPCfbdbSubnet1SubnetDCA66F36:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.2.0/24
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: FailbrowserStack/VPC/fbdbSubnet1
        - Key: aws-cdk:subnet-name
          Value: fbdb
        - Key: aws-cdk:subnet-type
          Value: Isolated
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/fbdbSubnet1/Subnet
  VPCfbdbSubnet1RouteTableA7C97BAB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: FailbrowserStack/VPC/fbdbSubnet1
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/fbdbSubnet1/RouteTable
  VPCfbdbSubnet1RouteTableAssociation97811265:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCfbdbSubnet1RouteTableA7C97BAB
      SubnetId:
        Ref: VPCfbdbSubnet1SubnetDCA66F36
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/fbdbSubnet1/RouteTableAssociation
  VPCfbdbSubnet2Subnet6F142B5B:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.3.0/24
      VpcId:
        Ref: VPCB9E5F0B4
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: FailbrowserStack/VPC/fbdbSubnet2
        - Key: aws-cdk:subnet-name
          Value: fbdb
        - Key: aws-cdk:subnet-type
          Value: Isolated
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/fbdbSubnet2/Subnet
  VPCfbdbSubnet2RouteTable4CE25CDA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      Tags:
        - Key: Name
          Value: FailbrowserStack/VPC/fbdbSubnet2
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/fbdbSubnet2/RouteTable
  VPCfbdbSubnet2RouteTableAssociationB4601894:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: VPCfbdbSubnet2RouteTable4CE25CDA
      SubnetId:
        Ref: VPCfbdbSubnet2Subnet6F142B5B
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/fbdbSubnet2/RouteTableAssociation
  VPCIGWB7E252D3:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: FailbrowserStack/VPC
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/IGW
  VPCVPCGW99B986DC:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPCB9E5F0B4
      InternetGatewayId:
        Ref: VPCIGWB7E252D3
    Metadata:
      aws:cdk:path: FailbrowserStack/VPC/VPCGW
  failbrowsersg7BD6FD30:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow ssh access to ec2 instances
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: allow ssh access from the world
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: allow PostgreSQL access from the world
          FromPort: 5432
          IpProtocol: tcp
          ToPort: 5432
        - CidrIp: 0.0.0.0/0
          Description: allow HTTP access from the world
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          Description: allow http access from the world
          FromPort: 5000
          IpProtocol: tcp
          ToPort: 5000
      VpcId:
        Ref: VPCB9E5F0B4
    Metadata:
      aws:cdk:path: FailbrowserStack/failbrowser-sg/Resource
  failbrowserInstance4InstanceRole00D6E7D9:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
        Version: "2012-10-17"
      Tags:
        - Key: Name
          Value: FailBrowser
        - Key: Application
          Value: FailBrowser
        - Key: Uptime
          Value: "False"
        - Key: Role
          Value: DevTest
        - Key: Environment
          Value: CI
        - Key: Owner
          Value: FailBrowserTeam
    Metadata:
      aws:cdk:path: FailbrowserStack/failbrowser-Instance4/InstanceRole/Resource
  failbrowserInstance4InstanceRoleDefaultPolicyA77AD1EE:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - EcrBackend20FDB803
                - Arn
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - EcrFeeder9CEB0EE8
                - Arn
        Version: "2012-10-17"
      PolicyName: failbrowserInstance4InstanceRoleDefaultPolicyA77AD1EE
      Roles:
        - Ref: failbrowserInstance4InstanceRole00D6E7D9
    Metadata:
      aws:cdk:path: FailbrowserStack/failbrowser-Instance4/InstanceRole/DefaultPolicy/Resource
  failbrowserInstance4InstanceProfileBB3ACFD5:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: failbrowserInstance4InstanceRole00D6E7D9
    Metadata:
      aws:cdk:path: FailbrowserStack/failbrowser-Instance4/InstanceProfile
  failbrowserInstance4BCDF0520:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      IamInstanceProfile:
        Ref: failbrowserInstance4InstanceProfileBB3ACFD5
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t3.nano
      KeyName: failbrowser-keypair
      SecurityGroupIds:
        - Fn::GetAtt:
            - failbrowsersg7BD6FD30
            - GroupId
      SubnetId:
        Ref: VPCfbappserverSubnet1SubnetC6845795
      Tags:
        - Key: Name
          Value: FailBrowser
        - Key: Application
          Value: FailBrowser
        - Key: Uptime
          Value: "False"
        - Key: Role
          Value: DevTest
        - Key: Environment
          Value: CI
        - Key: Owner
          Value: FailBrowserTeam
      UserData:
        Fn::Base64: "#!/bin/bash

          yum update -y

          yum install -y docker

          service docker start

          curl -L https://github.com/docker/compose/releases/download/1.25.5/docker-compose-Linux-x86_64 -o /usr/local/bin/docker-compose

          chmod +x /usr/local/bin/docker-compose

          usermod -a -G docker ec2-user

          cat <<EOF > /home/ec2-user/docker-compose.yml

          version: \"3.7\"

          services:

          \  backend:

          \    image:  364632538942.dkr.ecr.eu-west-1.amazonaws.com/failb-ecrba-qg1ohsstwf3i

          \    ports:

          \      - 80:80

          \    environment:

          \      - FBConnectionStrings__DefaultConnection=Host=failbrowserstack-apidbcluster-3yeib7r7jigb.cluster-c21gcwumlkoy.eu-west-1.rds.amazonaws.com;Port=5432;Username=masteruser;Password=QwertY1234;Database=fbdb

          \  feeder:

          \    image:  364632538942.dkr.ecr.eu-west-1.amazonaws.com/failb-ecrfe-11dumh2knspa9

          \    ports:

          \      - 5000:5000

          \    environment:

          \      - FB_PY_DB_USER=masteruser

          \      - FB_PY_DB_PASS=QwertY1234

          \      - FB_PY_DB_HOST=failbrowserstack-apidbcluster-3yeib7r7jigb.cluster-c21gcwumlkoy.eu-west-1.rds.amazonaws.com

          \      - FB_PY_DB_PORT=5432

          \      - FB_PY_DB_DATABASE=fbdb

          EOF

          cat <<EOF2 > /home/ec2-user/ecr_runme.sh

          aws ecr get-login --region eu-west-1 >login_script.sh

          EOF2

          \    "
    DependsOn:
      - failbrowserInstance4InstanceRoleDefaultPolicyA77AD1EE
      - failbrowserInstance4InstanceRole00D6E7D9
    Metadata:
      aws:cdk:path: FailbrowserStack/failbrowser-Instance4/Resource
  EcrBackend20FDB803:
    Type: AWS::ECR::Repository
    Properties:
      LifecyclePolicy:
        LifecyclePolicyText: '{"rules":[{"rulePriority":1,"selection":{"tagStatus":"tagged","tagPrefixList":["prod"],"countType":"imageCountMoreThan","countNumber":9999},"action":{"type":"expire"}},{"rulePriority":2,"selection":{"tagStatus":"any","countType":"sinceImagePushed","countNumber":30,"countUnit":"days"},"action":{"type":"expire"}}]}'
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: FailbrowserStack/EcrBackend/Resource
  EcrFeeder9CEB0EE8:
    Type: AWS::ECR::Repository
    Properties:
      LifecyclePolicy:
        LifecyclePolicyText: '{"rules":[{"rulePriority":1,"selection":{"tagStatus":"tagged","tagPrefixList":["prod"],"countType":"imageCountMoreThan","countNumber":9999},"action":{"type":"expire"}},{"rulePriority":2,"selection":{"tagStatus":"any","countType":"sinceImagePushed","countNumber":30,"countUnit":"days"},"action":{"type":"expire"}}]}'
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: FailbrowserStack/EcrFeeder/Resource
  dbsubnetgroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: generated subnet group
      SubnetIds:
        - Ref: VPCfbdbSubnet1SubnetDCA66F36
        - Ref: VPCfbdbSubnet2Subnet6F142B5B
    Metadata:
      aws:cdk:path: FailbrowserStack/db-subnet-group
  apidbcluster:
    Type: AWS::RDS::DBCluster
    Properties:
      Engine: aurora-postgresql
      DatabaseName: fbdb
      DBSubnetGroupName:
        Ref: dbsubnetgroup
      EngineMode: serverless
      EngineVersion: "10.7"
      MasterUsername: masteruser
      MasterUserPassword: QwertY1234
      Port: 5432
      ScalingConfiguration:
        AutoPause: true
        MaxCapacity: 2
        MinCapacity: 2
        SecondsUntilAutoPause: 300
      VpcSecurityGroupIds:
        - Fn::GetAtt:
            - failbrowsersg7BD6FD30
            - GroupId
    Metadata:
      aws:cdk:path: FailbrowserStack/apidbcluster
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.36.0,@aws-cdk/aws-cloudwatch=1.36.0,@aws-cdk/aws-ec2=1.36.0,@aws-cdk/aws-ecr=1.36.0,@aws-cdk/aws-events=1.36.0,@aws-cdk/aws-iam=1.36.0,@aws-cdk/aws-kms=1.36.0,@aws-cdk/aws-lambda=1.36.0,@aws-cdk/aws-logs=1.36.0,@aws-cdk/aws-rds=1.36.0,@aws-cdk/aws-s3=1.36.0,@aws-cdk/aws-s3-assets=1.36.0,@aws-cdk/aws-sam=1.36.0,@aws-cdk/aws-secretsmanager=1.36.0,@aws-cdk/aws-sqs=1.36.0,@aws-cdk/aws-ssm=1.36.0,@aws-cdk/cloud-assembly-schema=1.36.0,@aws-cdk/core=1.36 [...]
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
Outputs:
  Serveraddress:
    Description: Public dns name of ec2 server
    Value:
      Fn::GetAtt:
        - failbrowserInstance4BCDF0520
        - PublicDnsName
  OutEcrBackend:
    Description: Docker repository EcrBackend
    Value:
      Fn::Join:
        - ""
        - - Fn::Select:
              - 4
              - Fn::Split:
                  - ":"
                  - Fn::GetAtt:
                      - EcrBackend20FDB803
                      - Arn
          - .dkr.ecr.
          - Fn::Select:
              - 3
              - Fn::Split:
                  - ":"
                  - Fn::GetAtt:
                      - EcrBackend20FDB803
                      - Arn
          - "."
          - Ref: AWS::URLSuffix
          - /
          - Ref: EcrBackend20FDB803
  OutEcrFeeder:
    Description: Docker repository EcrFeeder
    Value:
      Fn::Join:
        - ""
        - - Fn::Select:
              - 4
              - Fn::Split:
                  - ":"
                  - Fn::GetAtt:
                      - EcrFeeder9CEB0EE8
                      - Arn
          - .dkr.ecr.
          - Fn::Select:
              - 3
              - Fn::Split:
                  - ":"
                  - Fn::GetAtt:
                      - EcrFeeder9CEB0EE8
                      - Arn
          - "."
          - Ref: AWS::URLSuffix
          - /
          - Ref: EcrFeeder9CEB0EE8
  AuroraHostname:
    Description: Host where db is
    Value:
      Fn::GetAtt:
        - apidbcluster
        - Endpoint.Address
